<resources>
    <string name="app_name">Youni</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_youtube_player">YoutubePlayer</string>
    <string name="title_activity_courses">Courses</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_signin">Signin</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="hint_StoreName">Store Name</string>
    <string name="hint_StoreAddress">Store Address</string>
    <string name="hint_StorePhoneNo">Store Phone No</string>
    <string name="app_id">1723899047830922</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_course_details">CourseDetails</string>
    <string name="title_activity_course_specs">Course Specs</string>
    <string name="title_activity_profile">Resume</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_forgotpassword">Forgot Password</string>
    <string name="title_activity_flash">FlashActivity</string>
</resources>
