<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:id="@+id/userLogin"
    android:orientation="vertical"
    android:padding="10dp" >



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImage3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:src="@mipmap/ic_launcher" />




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:fontFamily="sans-serif-condensed"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:fontFamily="sans-serif-condensed"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_login"
            android:textColor="@color/colorPrimary" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forgot Password ?"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="#fff"
            android:padding="5dp"/>

    </LinearLayout>

</LinearLayout>